{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 22,
  "lineage": "142995a7-87a8-b1f6-1ee4-bf17334f6b81",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:internet-gateway/igw-5c099c35",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-d35dcbba"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-d35dcbba"
                ]
              }
            ],
            "id": "igw-5c099c35",
            "internet_gateway_id": "igw-5c099c35",
            "owner_id": "617712498361"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:vpc/vpc-d35dcbba",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-af24b2c6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-a072e4c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-d35dcbba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04f5646d",
            "owner_id": "617712498361",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:vpc/vpc-d35dcbba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-960e98ff",
            "default_route_table_id": "rtb-04f5646d",
            "default_security_group_id": "sg-476e1420",
            "dhcp_options_id": "dopt-a072e4c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-d35dcbba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04f5646d",
            "owner_id": "617712498361"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:617712498361:loadbalancer/testkube-api-lb",
            "availability_zones": [
              "eu-north-1a",
              "eu-north-1b",
              "eu-north-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "testkube-api-lb-533150091.eu-north-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "testkube-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-042847ad563598c37",
              "i-0dc17ec4d71cea3ab",
              "i-0f499dd0a7a783758"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "testkube-api-lb",
            "security_groups": [
              "sg-09a5dd6dd614b6ad1",
              "sg-0c7dec83f010dd08a"
            ],
            "source_security_group": "617712498361/testkube-api-lb",
            "source_security_group_id": "sg-09a5dd6dd614b6ad1",
            "subnets": [
              "subnet-0460bb06d839cdb8c",
              "subnet-0cb4205d281d02790",
              "subnet-0ed04a4083e2c2ed2"
            ],
            "tags": {
              "Cluster": "testkube",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Cluster": "testkube",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a8ab5e0a29e8173",
            "arn": "arn:aws:ec2:eu-north-1:617712498361:instance/i-098da97eea83a7062",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098da97eea83a7062",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "testkube-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01c2fbfa0b85c8653",
            "private_dns": "ip-172-31-201-127.eu-north-1.compute.internal",
            "private_ip": "172.31.201.127",
            "public_dns": "ec2-13-51-171-156.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.171.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-05b43d6367b4c2f29",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "testkube-common",
              "testkube-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb4205d281d02790",
            "tags": {
              "Cluster": "testkube",
              "Name": "testkube-bastion",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Cluster": "testkube",
              "Name": "testkube-bastion",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0713ec264d98a4d56",
              "sg-0c7dec83f010dd08a"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a8ab5e0a29e8173",
            "arn": "arn:aws:ec2:eu-north-1:617712498361:instance/i-042847ad563598c37",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "testkube-host",
            "id": "i-042847ad563598c37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "testkube-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b19409115be9064d",
            "private_dns": "ip-172-31-201-55.eu-north-1.compute.internal",
            "private_ip": "172.31.201.55",
            "public_dns": "ec2-13-48-177-103.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.177.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-032023a0be383dd0b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "testkube-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb4205d281d02790",
            "tags": {
              "Name": "testkube-cp-1",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Name": "testkube-cp-1",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7dec83f010dd08a"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a8ab5e0a29e8173",
            "arn": "arn:aws:ec2:eu-north-1:617712498361:instance/i-0f499dd0a7a783758",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "testkube-host",
            "id": "i-0f499dd0a7a783758",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "testkube-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff354b5b39152957",
            "private_dns": "ip-172-31-202-151.eu-north-1.compute.internal",
            "private_ip": "172.31.202.151",
            "public_dns": "ec2-13-51-175-233.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.175.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-049c8058630f864ac",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "testkube-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0460bb06d839cdb8c",
            "tags": {
              "Name": "testkube-cp-2",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Name": "testkube-cp-2",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7dec83f010dd08a"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a8ab5e0a29e8173",
            "arn": "arn:aws:ec2:eu-north-1:617712498361:instance/i-0dc17ec4d71cea3ab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "testkube-host",
            "id": "i-0dc17ec4d71cea3ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "testkube-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087bd911cd957620b",
            "private_dns": "ip-172-31-203-104.eu-north-1.compute.internal",
            "private_ip": "172.31.203.104",
            "public_dns": "ec2-13-53-145-13.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.145.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0936e28a64fd4ac27",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "testkube-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed04a4083e2c2ed2",
            "tags": {
              "Name": "testkube-cp-3",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Name": "testkube-cp-3",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7dec83f010dd08a"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:security-group/sg-0c7dec83f010dd08a",
            "description": "cluster common rules",
            "egress": [],
            "id": "sg-0c7dec83f010dd08a",
            "ingress": [],
            "name": "testkube-common",
            "name_prefix": "",
            "owner_id": "617712498361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "testkube",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Cluster": "testkube",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-d35dcbba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:security-group/sg-09a5dd6dd614b6ad1",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a5dd6dd614b6ad1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "testkube-api-lb",
            "name_prefix": "",
            "owner_id": "617712498361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "testkube"
            },
            "tags_all": {
              "Cluster": "testkube"
            },
            "timeouts": null,
            "vpc_id": "vpc-d35dcbba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:security-group/sg-0713ec264d98a4d56",
            "description": "ssh access",
            "egress": [],
            "id": "sg-0713ec264d98a4d56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "testkube-ssh",
            "name_prefix": "",
            "owner_id": "617712498361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "testkube"
            },
            "tags_all": {
              "Cluster": "testkube"
            },
            "timeouts": null,
            "vpc_id": "vpc-d35dcbba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-377493607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c7dec83f010dd08a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-1340292761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c7dec83f010dd08a",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:subnet/subnet-0cb4205d281d02790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.31.201.0/24",
            "id": "subnet-0cb4205d281d02790",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617712498361",
            "tags": {
              "Cluster": "testkube",
              "Name": "testkube-eu-north-1a",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Cluster": "testkube",
              "Name": "testkube-eu-north-1a",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "vpc_id": "vpc-d35dcbba"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:subnet/subnet-0460bb06d839cdb8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.31.202.0/24",
            "id": "subnet-0460bb06d839cdb8c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617712498361",
            "tags": {
              "Cluster": "testkube",
              "Name": "testkube-eu-north-1b",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Cluster": "testkube",
              "Name": "testkube-eu-north-1b",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "vpc_id": "vpc-d35dcbba"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:617712498361:subnet/subnet-0ed04a4083e2c2ed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "172.31.203.0/24",
            "id": "subnet-0ed04a4083e2c2ed2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617712498361",
            "tags": {
              "Cluster": "testkube",
              "Name": "testkube-eu-north-1c",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "tags_all": {
              "Cluster": "testkube",
              "Name": "testkube-eu-north-1c",
              "kubernetes.io/cluster/testkube": "shared"
            },
            "vpc_id": "vpc-d35dcbba"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}